crates/pvm-contract-macros/tests/ui/constructor_with_ref_self.stderr
error: constructor must take `&mut self`; it always initializes storage
  --> tests/ui/constructor_with_ref_self.rs:9:9
   |
 9 | /         #[pvm_contract_macros::constructor]
10 | |         pub fn new(&self) -> Result<(), pvm_contract_sdk::EmptyError> {
11 | |             Ok(())
12 | |         }
   | |_________^
